// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tokenizer iterator iterates over the terms from the expression " 3+4 *$foo + sinh 1" 1`] = `
[
  {
    "col": 1,
    "line": 1,
    "lineBreaks": 0,
    "offset": 1,
    "text": "3",
    "toString": [Function],
    "type": "NUM3",
    "value": "3",
  },
  {
    "col": 1,
    "line": 1,
    "lineBreaks": 0,
    "offset": 2,
    "text": "+",
    "toString": [Function],
    "type": "POS",
    "value": "+",
  },
  {
    "col": 2,
    "line": 1,
    "lineBreaks": 0,
    "offset": 3,
    "text": "4",
    "toString": [Function],
    "type": "NUM4",
    "value": "4",
  },
  {
    "col": 6,
    "line": 1,
    "lineBreaks": 0,
    "offset": 5,
    "text": "*",
    "toString": [Function],
    "type": "MUL",
    "value": "*",
  },
  {
    "col": 7,
    "line": 1,
    "lineBreaks": 0,
    "offset": 6,
    "text": "$foo + sinh 1",
    "toString": [Function],
    "type": "syntaxError",
    "value": "$foo + sinh 1",
  },
]
`;

exports[`tokenizer iterator iterates over the terms from the expression " 3+4 *$foo + sinh PI" 1`] = `
[
  {
    "col": 1,
    "line": 1,
    "lineBreaks": 0,
    "offset": 1,
    "text": "3",
    "toString": [Function],
    "type": "NUM3",
    "value": "3",
  },
  {
    "col": 1,
    "line": 1,
    "lineBreaks": 0,
    "offset": 2,
    "text": "+",
    "toString": [Function],
    "type": "POS",
    "value": "+",
  },
  {
    "col": 2,
    "line": 1,
    "lineBreaks": 0,
    "offset": 3,
    "text": "4",
    "toString": [Function],
    "type": "NUM4",
    "value": "4",
  },
  {
    "col": 6,
    "line": 1,
    "lineBreaks": 0,
    "offset": 5,
    "text": "*",
    "toString": [Function],
    "type": "MUL",
    "value": "*",
  },
  {
    "col": 7,
    "line": 1,
    "lineBreaks": 0,
    "offset": 6,
    "text": "$",
    "toString": [Function],
    "type": "DOLLAR",
    "value": "$",
  },
  {
    "col": 8,
    "line": 1,
    "lineBreaks": 0,
    "offset": 7,
    "text": "foo",
    "toString": [Function],
    "type": "FOO",
    "value": "foo",
  },
  {
    "col": 12,
    "line": 1,
    "lineBreaks": 0,
    "offset": 11,
    "text": "+",
    "toString": [Function],
    "type": "ADD",
    "value": "+",
  },
  {
    "col": 14,
    "line": 1,
    "lineBreaks": 0,
    "offset": 13,
    "text": "sinh",
    "toString": [Function],
    "type": "SINH",
    "value": "sinh",
  },
  {
    "col": 19,
    "line": 1,
    "lineBreaks": 0,
    "offset": 18,
    "text": "PI",
    "toString": [Function],
    "type": "PI",
    "value": "PI",
  },
]
`;

exports[`tokenizer iterator iterates over the terms from the expression "(.1 + .2) * 10^8 + 4 @nthrt 8e5" 1`] = `
[
  {
    "col": 1,
    "line": 1,
    "lineBreaks": 0,
    "offset": 0,
    "text": "(",
    "toString": [Function],
    "type": "LPAR",
    "value": "(",
  },
  {
    "col": 1,
    "line": 1,
    "lineBreaks": 0,
    "offset": 1,
    "text": ".",
    "toString": [Function],
    "type": "DOT",
    "value": ".",
  },
  {
    "col": 2,
    "line": 1,
    "lineBreaks": 0,
    "offset": 2,
    "text": "1",
    "toString": [Function],
    "type": "NUM1",
    "value": "1",
  },
  {
    "col": 5,
    "line": 1,
    "lineBreaks": 0,
    "offset": 4,
    "text": "+",
    "toString": [Function],
    "type": "ADD",
    "value": "+",
  },
  {
    "col": 1,
    "line": 1,
    "lineBreaks": 0,
    "offset": 6,
    "text": ".",
    "toString": [Function],
    "type": "DOT",
    "value": ".",
  },
  {
    "col": 2,
    "line": 1,
    "lineBreaks": 0,
    "offset": 7,
    "text": "2",
    "toString": [Function],
    "type": "NUM2",
    "value": "2",
  },
  {
    "col": 9,
    "line": 1,
    "lineBreaks": 0,
    "offset": 8,
    "text": ")",
    "toString": [Function],
    "type": "RPAR",
    "value": ")",
  },
  {
    "col": 11,
    "line": 1,
    "lineBreaks": 0,
    "offset": 10,
    "text": "*",
    "toString": [Function],
    "type": "MUL",
    "value": "*",
  },
  {
    "col": 1,
    "line": 1,
    "lineBreaks": 0,
    "offset": 12,
    "text": "1",
    "toString": [Function],
    "type": "NUM1",
    "value": "1",
  },
  {
    "col": 2,
    "line": 1,
    "lineBreaks": 0,
    "offset": 13,
    "text": "0",
    "toString": [Function],
    "type": "NUM0",
    "value": "0",
  },
  {
    "col": 15,
    "line": 1,
    "lineBreaks": 0,
    "offset": 14,
    "text": "^",
    "toString": [Function],
    "type": "POW",
    "value": "^",
  },
  {
    "col": 1,
    "line": 1,
    "lineBreaks": 0,
    "offset": 15,
    "text": "8",
    "toString": [Function],
    "type": "NUM8",
    "value": "8",
  },
  {
    "col": 18,
    "line": 1,
    "lineBreaks": 0,
    "offset": 17,
    "text": "+",
    "toString": [Function],
    "type": "ADD",
    "value": "+",
  },
  {
    "col": 1,
    "line": 1,
    "lineBreaks": 0,
    "offset": 19,
    "text": "4",
    "toString": [Function],
    "type": "NUM4",
    "value": "4",
  },
  {
    "col": 22,
    "line": 1,
    "lineBreaks": 0,
    "offset": 21,
    "text": "@nthrt",
    "toString": [Function],
    "type": "NTHRT",
    "value": "@nthrt",
  },
  {
    "col": 1,
    "line": 1,
    "lineBreaks": 0,
    "offset": 28,
    "text": "8",
    "toString": [Function],
    "type": "NUM8",
    "value": "8",
  },
  {
    "col": 2,
    "line": 1,
    "lineBreaks": 0,
    "offset": 29,
    "text": "e",
    "toString": [Function],
    "type": "EXP10",
    "value": "e",
  },
  {
    "col": 3,
    "line": 1,
    "lineBreaks": 0,
    "offset": 30,
    "text": "5",
    "toString": [Function],
    "type": "NUM5",
    "value": "5",
  },
]
`;

exports[`tokenizer tokenize extracts tokens from the expression " 3+4 *$foo + sinh 1" 1`] = `
[
  {
    "offset": 1,
    "text": "3",
    "type": "NUM3",
    "value": "3",
  },
  {
    "offset": 2,
    "text": "+",
    "type": "POS",
    "value": "+",
  },
  {
    "offset": 3,
    "text": "4",
    "type": "NUM4",
    "value": "4",
  },
  {
    "offset": 5,
    "text": "*",
    "type": "MUL",
    "value": "*",
  },
  {
    "offset": 6,
    "text": "$foo + sinh 1",
    "type": "syntaxError",
    "value": "$foo + sinh 1",
  },
]
`;

exports[`tokenizer tokenize extracts tokens from the expression " 3+4 *$foo + sinh PI" 1`] = `
[
  {
    "offset": 1,
    "text": "3",
    "type": "NUM3",
    "value": "3",
  },
  {
    "offset": 2,
    "text": "+",
    "type": "POS",
    "value": "+",
  },
  {
    "offset": 3,
    "text": "4",
    "type": "NUM4",
    "value": "4",
  },
  {
    "offset": 5,
    "text": "*",
    "type": "MUL",
    "value": "*",
  },
  {
    "offset": 6,
    "text": "$",
    "type": "DOLLAR",
    "value": "$",
  },
  {
    "offset": 7,
    "text": "foo",
    "type": "FOO",
    "value": "foo",
  },
  {
    "offset": 11,
    "text": "+",
    "type": "ADD",
    "value": "+",
  },
  {
    "offset": 13,
    "text": "sinh",
    "type": "SINH",
    "value": "sinh",
  },
  {
    "offset": 18,
    "text": "PI",
    "type": "PI",
    "value": "PI",
  },
]
`;

exports[`tokenizer tokenize extracts tokens from the expression "(.1 + .2) * 10^8 + 4 @nthrt 8e5" 1`] = `
[
  {
    "offset": 0,
    "text": "(",
    "type": "LPAR",
    "value": "(",
  },
  {
    "offset": 1,
    "text": ".",
    "type": "DOT",
    "value": ".",
  },
  {
    "offset": 2,
    "text": "1",
    "type": "NUM1",
    "value": "1",
  },
  {
    "offset": 4,
    "text": "+",
    "type": "ADD",
    "value": "+",
  },
  {
    "offset": 6,
    "text": ".",
    "type": "DOT",
    "value": ".",
  },
  {
    "offset": 7,
    "text": "2",
    "type": "NUM2",
    "value": "2",
  },
  {
    "offset": 8,
    "text": ")",
    "type": "RPAR",
    "value": ")",
  },
  {
    "offset": 10,
    "text": "*",
    "type": "MUL",
    "value": "*",
  },
  {
    "offset": 12,
    "text": "1",
    "type": "NUM1",
    "value": "1",
  },
  {
    "offset": 13,
    "text": "0",
    "type": "NUM0",
    "value": "0",
  },
  {
    "offset": 14,
    "text": "^",
    "type": "POW",
    "value": "^",
  },
  {
    "offset": 15,
    "text": "8",
    "type": "NUM8",
    "value": "8",
  },
  {
    "offset": 17,
    "text": "+",
    "type": "ADD",
    "value": "+",
  },
  {
    "offset": 19,
    "text": "4",
    "type": "NUM4",
    "value": "4",
  },
  {
    "offset": 21,
    "text": "@nthrt",
    "type": "NTHRT",
    "value": "@nthrt",
  },
  {
    "offset": 28,
    "text": "8",
    "type": "NUM8",
    "value": "8",
  },
  {
    "offset": 29,
    "text": "e",
    "type": "EXP10",
    "value": "e",
  },
  {
    "offset": 30,
    "text": "5",
    "type": "NUM5",
    "value": "5",
  },
]
`;

exports[`tokenizer tokenize recognize all the registered terms 1`] = `
[
  {
    "offset": 1,
    "text": "0",
    "type": "NUM0",
    "value": "0",
  },
  {
    "offset": 3,
    "text": "1",
    "type": "NUM1",
    "value": "1",
  },
  {
    "offset": 5,
    "text": "2",
    "type": "NUM2",
    "value": "2",
  },
  {
    "offset": 7,
    "text": "3",
    "type": "NUM3",
    "value": "3",
  },
  {
    "offset": 9,
    "text": "4",
    "type": "NUM4",
    "value": "4",
  },
  {
    "offset": 11,
    "text": "5",
    "type": "NUM5",
    "value": "5",
  },
  {
    "offset": 13,
    "text": "6",
    "type": "NUM6",
    "value": "6",
  },
  {
    "offset": 15,
    "text": "7",
    "type": "NUM7",
    "value": "7",
  },
  {
    "offset": 17,
    "text": "8",
    "type": "NUM8",
    "value": "8",
  },
  {
    "offset": 19,
    "text": "9",
    "type": "NUM9",
    "value": "9",
  },
  {
    "offset": 21,
    "text": ".",
    "type": "DOT",
    "value": ".",
  },
  {
    "offset": 23,
    "text": "e",
    "type": "EXP10",
    "value": "e",
  },
  {
    "offset": 25,
    "text": "(",
    "type": "LPAR",
    "value": "(",
  },
  {
    "offset": 27,
    "text": ")",
    "type": "RPAR",
    "value": ")",
  },
  {
    "offset": 29,
    "text": ",",
    "type": "COMMA",
    "value": ",",
  },
  {
    "offset": 31,
    "text": "~",
    "type": "ELLIPSIS",
    "value": "~",
  },
  {
    "offset": 33,
    "text": "-",
    "type": "SUB",
    "value": "-",
  },
  {
    "offset": 35,
    "text": "-",
    "type": "SUB",
    "value": "-",
  },
  {
    "offset": 37,
    "text": "+",
    "type": "ADD",
    "value": "+",
  },
  {
    "offset": 39,
    "text": "+",
    "type": "ADD",
    "value": "+",
  },
  {
    "offset": 41,
    "text": "*",
    "type": "MUL",
    "value": "*",
  },
  {
    "offset": 43,
    "text": "/",
    "type": "DIV",
    "value": "/",
  },
  {
    "offset": 45,
    "text": "%",
    "type": "MOD",
    "value": "%",
  },
  {
    "offset": 47,
    "text": "^",
    "type": "POW",
    "value": "^",
  },
  {
    "offset": 49,
    "text": "!",
    "type": "FAC",
    "value": "!",
  },
  {
    "offset": 51,
    "text": "=",
    "type": "ASSIGN",
    "value": "=",
  },
  {
    "offset": 53,
    "text": "#",
    "type": "PERCENT",
    "value": "#",
  },
  {
    "offset": 55,
    "text": "ans",
    "type": "VAR_ANS",
    "value": "ans",
  },
  {
    "offset": 59,
    "text": "mem",
    "type": "VAR_MEM",
    "value": "mem",
  },
  {
    "offset": 63,
    "text": "PI",
    "type": "PI",
    "value": "PI",
  },
  {
    "offset": 66,
    "text": "E",
    "type": "E",
    "value": "E",
  },
  {
    "offset": 68,
    "text": "TEN",
    "type": "TEN",
    "value": "TEN",
  },
  {
    "offset": 72,
    "text": "NaN",
    "type": "NAN",
    "value": "NaN",
  },
  {
    "offset": 76,
    "text": "Infinity",
    "type": "INFINITY",
    "value": "Infinity",
  },
  {
    "offset": 85,
    "text": "Syntax",
    "type": "ERROR",
    "value": "Syntax",
  },
  {
    "offset": 92,
    "text": "exp",
    "type": "EXP",
    "value": "exp",
  },
  {
    "offset": 96,
    "text": "sqrt",
    "type": "SQRT",
    "value": "sqrt",
  },
  {
    "offset": 101,
    "text": "cbrt",
    "type": "CBRT",
    "value": "cbrt",
  },
  {
    "offset": 106,
    "text": "nthrt",
    "type": "NTHRT",
    "value": "nthrt",
  },
  {
    "offset": 112,
    "text": "floor",
    "type": "FLOOR",
    "value": "floor",
  },
  {
    "offset": 118,
    "text": "ceil",
    "type": "CEIL",
    "value": "ceil",
  },
  {
    "offset": 123,
    "text": "round",
    "type": "ROUND",
    "value": "round",
  },
  {
    "offset": 129,
    "text": "trunc",
    "type": "TRUNC",
    "value": "trunc",
  },
  {
    "offset": 135,
    "text": "sin",
    "type": "SIN",
    "value": "sin",
  },
  {
    "offset": 139,
    "text": "cos",
    "type": "COS",
    "value": "cos",
  },
  {
    "offset": 143,
    "text": "tan",
    "type": "TAN",
    "value": "tan",
  },
  {
    "offset": 147,
    "text": "asin",
    "type": "ASIN",
    "value": "asin",
  },
  {
    "offset": 152,
    "text": "acos",
    "type": "ACOS",
    "value": "acos",
  },
  {
    "offset": 157,
    "text": "atan",
    "type": "ATAN",
    "value": "atan",
  },
  {
    "offset": 162,
    "text": "sinh",
    "type": "SINH",
    "value": "sinh",
  },
  {
    "offset": 167,
    "text": "cosh",
    "type": "COSH",
    "value": "cosh",
  },
  {
    "offset": 172,
    "text": "tanh",
    "type": "TANH",
    "value": "tanh",
  },
  {
    "offset": 177,
    "text": "asinh",
    "type": "ASINH",
    "value": "asinh",
  },
  {
    "offset": 183,
    "text": "acosh",
    "type": "ACOSH",
    "value": "acosh",
  },
  {
    "offset": 189,
    "text": "atanh",
    "type": "ATANH",
    "value": "atanh",
  },
  {
    "offset": 195,
    "text": "ln",
    "type": "LN",
    "value": "ln",
  },
  {
    "offset": 198,
    "text": "log",
    "type": "LOG",
    "value": "log",
  },
  {
    "offset": 202,
    "text": "lg",
    "type": "LG",
    "value": "lg",
  },
  {
    "offset": 205,
    "text": "log10",
    "type": "LOG10",
    "value": "log10",
  },
  {
    "offset": 211,
    "text": "abs",
    "type": "ABS",
    "value": "abs",
  },
  {
    "offset": 215,
    "text": "random",
    "type": "RAND",
    "value": "random",
  },
]
`;
